Add caching and service unit test
